src/styles/site.scss
@import url(https://use.typekit.net/bdx2zst.css);

// ----------------------------
// tools
// ----------------------------
@function pow($number, $exp) {
    $value: 1;

    @if $exp > 0 {
        @for $i from 1 through $exp {
            @if $exp < 0 {
                $value: ($value / $number);
            } @else {
                $value: ($value * $number);
            }
        }
    }

    @return $value;
}

// modular type scale: 1.414 - augmented fourth (https://type-scale.com/)
@function scale-type($multi, $ratio: 1.414, $base: 1rem) {
    @return $base * pow($ratio, $multi);
}

:root {
  --font-0: 18px;
  --font-1: #{scale-type(1)};
  --font-2: #{scale-type(2)};
  --font-3: #{scale-type(3)};
  --font-4: #{scale-type(4)};
  --font-5: #{scale-type(5)};
}

// ----------------------------
// elements
// ----------------------------

*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  margin: 0;
}

html {
  font-family: "proxima-nova";
  font-weight: 400;
  font-size: var(--font-0);
  line-height: 1.22;
}

figure {
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "proxima-nova-condensed";
  font-weight: 700;
  margin-top: 0;
  margin-bottom: 20px;
}

h1, h2 {
  font-size: var(--font-5); // 101.75px;
}

h3 {
  font-size: var(--font-4); // 71.96px;
}

h4 {
  font-size: var(--font-3); // 50.89px;
}

h5 {
  font-size: var(--font-2); // 35.99px;
}

h6 {
  font-size: var(--font-1); // 25.45px;
}

p {
  margin-top: 0;
}
p:last-child {
  margin-bottom: 0;
}


// ----------------------------
// animations
// ----------------------------

@keyframes phone-home {
 from {
   background-position: left calc(50vw + 20px) bottom -100vh;
 }

 to {
   background-position: left calc(50vw + 20px) bottom -30vh;
 }
}

@keyframes fade-in-down {
  from {
    opacity: 0;
    transform: translate3d(0, -100% ,0);
  }

  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}


// ----------------------------
// objects
// ----------------------------

.o-brand {
  display: inline-flex;
  align-items: center;
  flex-wrap: nowrap;
}

.o-brand__logo {
  display: inline-block;
  width: 0.833em; /* 750x900 */
  height: 1em;
  background: url(./media/branding/logo-tight.png) no-repeat center center;
  background-size: contain;
  vertical-align: baseline;
}

.o-brand__name {
  white-space: nowrap;
}
.o-brand__logo + .o-brand__name {
  margin-left: 0.25em;
}
.o-brand--no-name .o-brand__name {
  display: none;
}


// ----------------------------
// layouts
// ----------------------------

// row -----------------------
.l-row {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.l-row--narrow {
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
}

.l-row--halves {
  justify-content: space-between;
}
.l-row--halves > * {
  flex-basis: calc(50% - 20px);
}


// aspect -------------------
.l-aspect {
  position: relative;
  width: 100%;
  height: 0;
  padding-top: 100%;
}
.l-aspect > * {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.l-aspect--fullwidth {
  padding-top: 57%;
  max-height: 100vh;
}

// ----------------------------
// components
// ----------------------------


// button --------------------
.c-button {
  display: inline-block;
  padding: 7px 25px;

  font-weight: 400;
  font-size: inherit;
  line-height: 1.2;
  text-decoration: none;
  text-align: center;

  cursor: pointer;
  border-radius: 2px;
  border: 1px solid #CED4DE;
  background-color: #fff;
  color: #333333;
}


// menu --------------------
.c-menu {}

.c-menu__list {
  list-style: none;
  margin: 0;
  padding-left: 0;

  display: flex;
  flex-direction: row;
  align-items: center;
}

.c-menu__item {}

.c-menu__link {}


// header --------------------
.c-header {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;

  font-size: 20px;
  line-height: 1em;
  padding: 0.5em 1em;
  height: 60px;
}
.c-header__brand {
  font-size: 2em;
  line-height: 1;
}
.c-header__nav .c-menu__link {
  border-color: transparent;
  background-color: transparent;
}
.c-header__nav .c-menu__link:active,
.c-header__nav .c-menu__link.is-active {
  border-color: transparent;
  background-color: #93C4F5;
}


// gallery --------------------
.c-gallery {
  display: grid;
  padding: 20px;
  grid-gap: 20px;
}

.c-gallery__item {
  position: relative;
  overflow: hidden;
  background-color: #B3B3B3;
  border-radius: 2px;
}

.c-gallery__image {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  height: 100%;
  width: auto;
}

.c-gallery--zipper {}
.c-gallery--zipper .c-gallery__item:nth-child(4n + 1) {
  grid-row: 1 / span 1;
}
.c-gallery--zipper .c-gallery__item:nth-child(4n + 2) {
  grid-row: 2 / span 2;
}
.c-gallery--zipper .c-gallery__item:nth-child(4n + 3) {
  grid-row: 1 / span 2;
}
.c-gallery--zipper .c-gallery__item:nth-child(4n + 4) {
  grid-row: 3 / span 1;
}

.c-gallery--thirds {
  grid-template-columns: repeat(3, 1fr);
}


// section --------------------
.c-section {
  padding: 60px 0;
}

.c-section--full {
  display: flex;
  align-items: center;
  min-height: 100vh;
}

.c-section--fixed-hero {
  display: flex;
  align-items: center;
  height: 100vh;
  box-shadow: inset 0 -30px 30px -30px rgba(0,0,0,0.2);
}

.c-section--dark {
  background-color: #666666;
}

.c-section--light {
  background-color: #EBF0F5;
}

.c-section--feint {
  background-color: #F6F6F6;
}

.c-section--medium {
  background-color: #EAEAEA;
}

.c-section--rough,
.c-section--polished {
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: auto 100vh;
  background-position: left calc(50vw + 20px) bottom -30vh;

  animation-name: phone-home;
  animation-duration: 0.65s;
}

.c-section--rough {
  background-image: url(./media/features/phone-mergein-rough.png);
}

.c-section--polished {
  background-image: url(./media/features/phone-mergein-finished.png);
}


// footer --------------------
.c-footer {
  padding: 50px 20px;
  background-color: #313233;
  color: #B3B3B3;
}


// ----------------------------
// templates
// ----------------------------


// home ----------------------
.t-home {}

.t-home__header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 2;
}

// ----------------------------
// helpers
// ----------------------------

// viewport - these are reserved
.h-vp-in,
.h-vp-in-once {
  &.is-in-view {
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-delay: .25s;
  }
}

.h-a-fade-in-down.is-in-view {
  animation-name: fade-in-down;
}

// text
.h-txt-large {
  font-size: 1.999rem;
}

